--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,25 +28,31 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
-    - name: Build with Maven
-      run: mvn clean install
-
-    - name: Run Selenium Tests
-      run: mvn test
+    # Optional: If you need to serve local HTML
+    - name: Start local server for localhost testing
+      run: python -m http.server 8080 &
     
-  
+    - name: Wait for server to be ready
+      run: |
+        for i in {1..10}; do
+          curl -sSf http://localhost:8080/index.html && break
+          echo "Waiting for server..."
+          sleep 2
+        done
 
+    - name: Build and Run Tests with Maven
+      run: mvn clean test
 
     - name: Upload Extent Report
       if: always()
       uses: actions/upload-artifact@v4
       with:
         name: ExtentReport
-        path: ExtentReport.html
+        path: '**/ExtentReport.html'
 
     - name: Upload CSV Log
       if: always()
       uses: actions/upload-artifact@v4
       with:
         name: CricketScoreCSVLog
-        path: cricket_score_log.csv
+        path: '**/cricket_score_log.csv'
