--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,3 +56,78 @@ jobs:
       with:
         name: CricketScoreCSVLog
         path: '**/cricket_score_log.csv'
+name: Selenium Java TestNG CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '21'
+
+    - name: Cache Maven packages
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+
+    # ✅ Setup Node.js for npm server
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+
+    # ✅ Install npm dependencies
+    - name: Install npm dependencies
+      run: npm install
+
+    # ✅ Start npm server on port 3000
+    - name: Start npm server
+      run: npm start &
+    
+    # ✅ Wait for server to be ready
+    - name: Wait for server
+      run: |
+        for i in {1..15}; do
+          if curl -sSf http://localhost:3000/index.html; then
+            echo "Server is up!"
+            break
+          fi
+          echo "Waiting for server on port 3000..."
+          sleep 3
+        done
+
+    # ✅ Run Maven tests
+    - name: Build and run tests
+      run: mvn clean test
+
+    # ✅ Upload Extent Report
+    - name: Upload Extent Report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: ExtentReport
+        path: '**/ExtentReport.html'
+
+    # ✅ Upload CSV Log
+    - name: Upload Cricket Score CSV Log
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: CricketScoreCSVLog
+        path: '**/cricket_score_log.csv'
